# Momentum_Study

./: gsenc_cso_streamlit.yaml  pyproject.toml
4주차_분류/: [공유용]titanic.ipynb  titanic-introduction.ipynb  titanic.ipynb
5주차_회귀/: (공유용)[CRISP-DM] w05-ML_회귀_실습.ipynb  [CRISP-DM] w05-ML_회귀_실습.ipynb
6주차_비지도/: (공유용)[여름방학 6w] 비지도학습_실습.ipynb  (수업진행방식)[CRISP_DM] w06-ML 비지도 학습.ipynb  [CRISP_DM] w06-ML 비지도학습_실습.ipynb  [여름방학 6w] 비지도학습_실습.ipynb
7주차_평가/: [CRISP-DM] w07-ML_평가.ipynb
